# xoa

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.rst  MANIFEST.in  README.md  README.rst  ROADMAP.rst  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.default  setup.py
.binder/: environment.yml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: python-package-conda.yml  python-publish.yml
binder/: environment.yml
doc/: accessors.rst  api.rst  appendix.cf.rst  appendix.meta.rst  appendix.options.rst  appendix.rst  changes.rst  cli.rst  conf.py  configure.rst  examples.rst  howtostart.rst  indepth.cfgm.cfg2rst.txt  indepth.cfgm.rst  indepth.filtering.rst  indepth.grids.rst  indepth.meta.rst  indepth.rst  index.rst  install.rst  quickstart.rst  usages.cf.rst  usages.rst  uses.cf.rst  uses.cfgm.rst  uses.meta.rst  uses.rst
doc/_static/: custom.css
doc/binder/: environment.yml  setup.py
doc/examples/: croco_read_plot_section.ipynb  croco_section.ipynb  hycom_gdp.ipynb
doc/ext/: gencfspecs.py  genfortran.py  genlogos.py  genmetaspecs.py  genoptions.py
docs/: api.rst
docs/_templates/autosummary/: class.rst  module.rst
env/: environment.doc.yml  environment.rtd.yml  environment.yml  requirements-doc.txt
examples/: README.rst  plot_croco_section.py  plot_hycom_gdp.py  plot_mercator_argo.py
src/: interp.f90
tests/: test_accessors.py  test_cf.py  test_coords.py  test_core_geo.py  test_core_interp.py  test_core_num.py  test_core_regrid.py  test_core_sigma.py  test_dyn.py  test_exceptions.py  test_filter.py  test_geo.py  test_grid.py  test_interp.py  test_meta.py  test_misc.py  test_options.py  test_regrid.py  test_sigma.py  test_thermdyn.py
xoa/: __init__.py  _get_version.py  accessors.py  cf.cfg  cf.ini  cf.py  cf_configs.py  cfgm.py  cli.py  color.py  coords.py  data_samples.py  data_samples.txt  dyn.py  exceptions.py  filter.py  geo.py  grid.py  interp.py  krig.py  misc.py  num.py  options.py  plot.py  regrid.py  sigma.py  stats.py  thermdyn.py  xoa.ini
xoa/_samples/: argo-7900573.nc  argo.cfg  croco.cfg  gdp.cfg  hycom.cfg  hycom.gdp.u.nc  hycom.gdp.v.nc  mercator.cfg
xoa/cf_configs/: __init__.py  default.cfg  hycom.cfg
xoa/core/: __init__.py  geo.py  interp.py  num.py  regrid.py  sigma.py
xoa/data_samples/: __init__.py  croco.south-africa.meridional.nc  croco.south-africa.surf.nc  gdp-6203641.csv  hycom.gdp.h.nc  ibi-argo-7900573.nc
xoa/meta/: __init__.py  categories.py  general.py  meta.cfg  meta.ini  sglocator.py
xoa/meta/configs/: __init__.py  default.cfg
xoa/tests/: conftest.py  test_cf.py  test_coords.py  test_dyn.py  test_filter.py  test_geo.py  test_grid.py  test_interp.py  test_meta.py  test_misc.py  test_regrid.py  test_sigma.py  test_stats.py  test_thermdyn.py
