[project]
name = "xoa"
authors = [
    {name = "Shom", email = "stephane.raynaud@shom.fr"},
]
license = {text = "Apache-2.0"}
description = "xarray-based ocean analysis library"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
requires-python = ">=3.10"
dependencies = [
    "appdirs",
    "configobj",
    "gsw",
    "netCDF4",
    "numba",
    "scipy",
    "xarray>=0.17"
]

[project.urls]
homepage = "https://xoa.readthedocs.io/"
issue-tracker = "https://github.com/shom-fr/xoa/issues"
source-code = "https://github.com/shom-fr/xoa"


[project.entry-points.console_scripts]
xoa = "xoa.cli:main"

[build-system]
requires = ["setuptools>=42", "setuptools_scm>7"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xoa"]

[tool.setuptools.dynamic]
version = {attr = "xoa.__version__"}

[tool.setuptools_scm]
fallback_version = "999"
write_to = "xoa/_version.py"
write_to_template= '__version__ = "{version}"'
tag_regex= "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.setuptools.package-data]
xoa = [
    "cf.cfg",
    "cf.ini",
    "_samples/*"
]

[tool.flake8]
max-line-length = 100
ignore = [
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top of file
    "E501",  # line too long - let black worry about that
    "E731",  # do not assign a lambda expression, use a def
    "W503"   # line break before binary operator
]
exclude = [
    ".eggs",
    "doc"
]
[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
