[metadata]
name = xoa
author = Shom
author_email = stephane.raynaud@shom.fr
license = Apache
description = xarray-based ocean analysis library
long_description_content_type=text/x-rst
url = https://github.com/vacumm/xoa
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
scripts = bin/xoa
python_requires = >=3.7
install_requires =
    appdirs
    cmocean
    configobj
    matplotlib-base
    netCDF4
    numba
    setuptools >= 40.4  # For pkg_resources
    scipy
    xarray
    xesmf >= 0.4
setup_requires =
    setuptools >= 40.4
    setuptools_scm

[options.package_data]
xoa =
    cf.cfg
    cf.ini
    _samples/*

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
